@@ -1,3 +1,12 @@
+2008-02-27  Alexander Larsson  <alexl@redhat.com>
+
+        * gcontenttype.c:
+	Fix type warnings
+	
+        * gunixvolume.c:
+        (g_unix_volume_mount):
+	Add missing GMountMountFlags argument
+
 2008-02-26  Alexander Larsson  <alexl@redhat.com>
 
         * glocalfile.c:
